e2e/tests/all/snapshots/loader_rest_desktop.snap
---
source: e2e/src/suite.rs
description: loader at desktop (rest)
expression: tree
---
button "Upload"
  StaticText "Upload"
