e2e/tests/all/snapshots/loader_rest_mobile.snap
---
source: e2e/src/suite.rs
description: loader at mobile (rest)
expression: tree
---
button "Upload"
  StaticText "Upload"
