e2e/tests/all/snapshots/mark_rest_desktop.snap
---
source: e2e/src/suite.rs
description: mark at desktop (rest)
expression: tree
---
paragraph
  mark
    link "a link inside a mark"
      StaticText "a link inside a mark"
paragraph
  mark
    link "a link inside a mark"
      StaticText "a link inside a mark"
paragraph
  mark
    link "a link inside a mark"
      StaticText "a link inside a mark"
paragraph
  mark
    link "a link inside a mark"
      StaticText "a link inside a mark"
paragraph
  mark
    link "a link inside a mark"
      StaticText "a link inside a mark"
paragraph
  mark
    link "a link inside a mark"
      StaticText "a link inside a mark"
paragraph
  mark
    link "a link inside a mark"
      StaticText "a link inside a mark"
