e2e/tests/all/snapshots/mark_rest_mobile.snap
---
source: e2e/src/suite.rs
description: mark at mobile (rest)
expression: tree
---
paragraph
  mark
    link "a link inside a mark"
      StaticText "a link inside a mark"
paragraph
  mark
    link "a link inside a mark"
      StaticText "a link inside a mark"
paragraph
  mark
    link "a link inside a mark"
      StaticText "a link inside a mark"
paragraph
  mark
    link "a link inside a mark"
      StaticText "a link inside a mark"
paragraph
  mark
    link "a link inside a mark"
      StaticText "a link inside a mark"
paragraph
  mark
    link "a link inside a mark"
      StaticText "a link inside a mark"
paragraph
  mark
    link "a link inside a mark"
      StaticText "a link inside a mark"
