e2e/tests/all/snapshots/menu_open_desktop.snap
---
source: e2e/src/suite.rs
description: menu at desktop (open)
expression: tree
---
button "Actions" [expanded] [haspopup=menu]
  StaticText "Actions"
menu "Actions"
  group "Edit"
    StaticText "Edit"
    menuitem "Cut"
      StaticText "Cut"
    menuitem "Paste" [disabled]
      StaticText "Paste"
  separator
  menuitem "Save"
    StaticText "Save"
  menuitem "Share" [expanded=false] [haspopup=menu]
    StaticText "Share"
--> aria-controls [id="lsx-N-menu"] (rendered above)
