e2e/tests/all/snapshots/menu_open_mobile.snap
---
source: e2e/src/suite.rs
description: menu at mobile (open)
expression: tree
---
generic
  button "Actions" [expanded] [haspopup=menu]
    StaticText "Actions"
    generic
generic
  menu "Actions"
    group "Edit"
      generic
        StaticText "Edit"
      menuitem "Cut"
        StaticText "Cut"
      menuitem "Paste" [disabled]
        StaticText "Paste"
    separator
    menuitem "Save"
      StaticText "Save"
    menuitem "Share" [expanded=false] [haspopup=menu]
      StaticText "Share"
--> aria-controls [id="lsx-N-menu"] (rendered above)
